--- a/MvcMovie/MvcMovie/Views/Movies/Create.cshtml
+++ b/MvcMovie/MvcMovie/Views/Movies/Create.cshtml
@@ -38,6 +38,11 @@
           <span asp-validation-for="Rating" class="text-danger"></span>
         </div>
         <div class="form-group">
+          <label asp-for="Quality" class="control-label"></label>
+          <input asp-for="Quality" class="form-control" />
+          <span asp-validation-for="Quality" class="text-danger"></span>
+        </div>
+        <div class="form-group">
           <input type="submit" value="Create" class="btn btn-primary" />
         </div>
       </form>
