--- a/MvcMovie/MvcMovie/Views/Movies/Details.cshtml
+++ b/MvcMovie/MvcMovie/Views/Movies/Details.cshtml
@@ -40,6 +40,12 @@
       <dd class="col-sm-10">
         @Html.DisplayFor(model => model.Rating)
       </dd>
+      <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.Quality)
+      </dt>
+      <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.Quality)
+      </dd>
     </dl>
 </div>
 <div>
