--- a/MvcMovie/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/MvcMovie/Views/Movies/Index.cshtml
@@ -12,61 +12,47 @@
 <form asp-controller="Movies" asp-action="Index" method="get">
   <p>
 
-    <select asp-for="MovieGenre" asp-items="Model.Genres">
-      <option value="">All</option>
+    <select asp-for="MovieGenre" asp-items="Model.Genres" onchange="this.form.submit();">
+      <option value="">Жанр</option>
     </select>
 
+    <select asp-for="MovieQuality" asp-items="Model.Quality" onchange="this.form.submit();">
+      <option value="">Качество</option>
+    </select>
     Title: <input type="text" asp-for="SearchString" />
     <input type="submit" value="Filter" />
   </p>
 </form>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>
-        @Html.DisplayNameFor(model => model.Movies[0].Title)
-      </th>
-      <th>
-        @Html.DisplayNameFor(model => model.Movies[0].ReleaseDate)
-      </th>
-      <th>
-        @Html.DisplayNameFor(model => model.Movies[0].Genre)
-      </th>
-      <th>
-        @Html.DisplayNameFor(model => model.Movies[0].Price)
-      </th>
-      <th>
-        @Html.DisplayNameFor(model => model.Movies[0].Rating)
-      </th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    @foreach (var item in Model.Movies)
-    {
-    <tr>
-      <td>
-        @Html.DisplayFor(modelItem => item.Title)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.ReleaseDate)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Genre)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Price)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Rating)
-      </td>
-      <td>
-        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-      </td>
-    </tr>
-    }
-  </tbody>
-</table>
+<div class="container">
+<div class="wrap">
+  <div class="content">
+    <div class="contBody">
+      @foreach (var item in Model.Movies)
+      {
+      <div class="item-1">
+        <div class="blockItem shortstory">
+          <div class="shortstoryImg">
+            <div class="triangle-topleft-new"><a asp-action="Delete" asp-route-id="@item.Id"><span>@item.Quality</span></a></div>
+            <a asp-action="Details" asp-route-id="@item.Id">
+              <img src="images/40826.jpg">
+            </a>
+            <b class="short_itemTitle">
+              <span>@item.Title</span>
+            </b>
+          </div>
+          <div class="shortstory_info">
+            <div class="itemStats">
+              <span class="itemStats_left"><i class="ion-ios-eye-outline"></i>1303</span>
+              <span class="itemStats_right"><i class="ion-ios-download-outline"></i>354</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      }
+
+    </div>
+  </div>
+</div>
+</div>
+
